--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,11 @@
-yaml
-name: Hola Mundo Workflow
+name: "Hola Mundo Workflow"
 on:
- push:
- branches:
- - main
+  push:
+    branches:
+      - main
 jobs:
- hola-mundo:
- runs-on: ubuntu-latest
- steps:
- - name: Print greeting
- run: echo "Hola Mundo!"
+  hola-mundo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print greeting
+        run: echo "Hola Mundo!"
