--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: "Hola Mundo Workflow"
+name: "Hola MundoWorkflow"
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   hola-mundo:
     runs-on: ubuntu-latest
