--- a/.github/workflows/lab2.yml
+++ b/.github/workflows/lab2.yml
@@ -1,22 +1,13 @@
 name: env_tutorial
-## Triggers the workflow on when there is a push, or
-## pull request on the main branch
+
 on: [pull_request, push]
 jobs:
-   job1:
- ## The type of runner that the job will run on,
- ## here it runs on ubuntu latest
-     runs-on: ubuntu-latest
-     steps:
-     - name: step 1
-     env:
-  ## Sets environment variable
-      API_KEY: XXXXXXXXXXXX
- ## Reference your environment variables
+ job1:
+    runs-on: ubuntu-latest
+    steps:
+    - name: step 1
+      env:
+       API_KEY: XXXXXXXXXXXX
       run: echo "The API key is:${{env.API_KEY}}"
-   job2:
-     runs-on: ubuntu-latest
-     steps:
-     - name: step 1
- ## Another way reference your environment variables
-       run: echo "The API key is:$API_KEY"
+    - name: step 2
+      run: echo "The API key is:${{env.API_KEY}}" 
