--- a/.github/workflows/lab2.yml
+++ b/.github/workflows/lab2.yml
@@ -1,14 +1,18 @@
 name: env_tutorial
-
+## Triggers the workflow on when there is a push or
+## pull request on the main branch
 on: [pull_request, push]
 jobs:
  job1:
+ ## The type of runner that the job will run on
   runs-on: ubuntu-latest
   steps:
-  - name: step 1
-    run: echo "The API key is:${{secrets.API_KEY}}"
- job2:
-  runs-on: ubuntu-latest
-  steps:
-  - name: step 1
-    run: echo "The API key is:${{secrets.API_KEY}}"
+   - name: step 1
+     run: |
+      echo "The job_id is: $GITHUB_JOB" # reference the default environment variables
+      echo "The id of this action is: $GITHUB_ACTION"
+      echo "The run id is: $GITHUB_RUN_ID"
+      echo "The GitHub Actor's username is: $GITHUB_ACTOR"
+   - name: step 2
+     run: |
+      echo "The run id is: $GITHUB_RUN_ID"
